// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should match snapShot 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    align="left"
    bold={false}
    color="blue"
    fontSize={16}
    lineHeight={18}
    marginBottom={0}
    marginLeft={0}
    marginTop={0}
    style={
      Array [
        Object {
          "color": "#007AFF",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "lineHeight": 18,
          "textAlign": "left",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;

exports[`Button Component should match snapShot 2`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#334249",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    align="left"
    bold={false}
    color="blue"
    fontSize={16}
    lineHeight={18}
    marginBottom={0}
    marginLeft={0}
    marginTop={0}
    style={
      Array [
        Object {
          "color": "#007AFF",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "lineHeight": 18,
          "textAlign": "left",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;

exports[`Button Component should match snapShot 3`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#007AFF",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    align="left"
    bold={false}
    color="white"
    fontSize={16}
    lineHeight={18}
    marginBottom={0}
    marginLeft={0}
    marginTop={0}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "lineHeight": 18,
          "textAlign": "left",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;

exports[`Button Component should match snapShot 4`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#007AFF",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    align="left"
    bold={false}
    color="white"
    fontSize={16}
    lineHeight={18}
    marginBottom={0}
    marginLeft={0}
    marginTop={0}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "lineHeight": 18,
          "textAlign": "left",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;

exports[`Button Component should match snapShot 5`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#007AFF",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "marginBottom": 20,
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    align="left"
    bold={false}
    color="white"
    fontSize={16}
    lineHeight={18}
    marginBottom={0}
    marginLeft={0}
    marginTop={0}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "lineHeight": 18,
          "textAlign": "left",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;

exports[`Button Component should match snapShot 6`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#007AFF",
      "borderRadius": 8,
      "height": 50,
      "justifyContent": "center",
      "marginTop": 20,
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    align="left"
    bold={false}
    color="white"
    fontSize={16}
    lineHeight={18}
    marginBottom={0}
    marginLeft={0}
    marginTop={0}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "lineHeight": 18,
          "textAlign": "left",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;

exports[`Button Component should match snapShot 7`] = `
<View
  activeOpacity={0.6}
  marginBottom={0}
  marginTop={0}
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "borderColor": "#343A42",
        "borderRadius": 8,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
        "width": "100%",
      },
    ]
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "backgroundColor": "#007AFF",
        "borderRadius": 8,
        "height": 50,
        "left": 0,
        "position": "absolute",
        "top": -2,
        "transform": Array [
          Object {
            "translateX": 0,
          },
          Object {
            "translateY": 0,
          },
        ],
        "width": 50,
      }
    }
  />
  <Text
    align="left"
    bold={false}
    color="blue"
    fontSize={16}
    lineHeight={18}
    marginBottom={0}
    marginLeft={0}
    marginTop={0}
    style={
      Array [
        Object {
          "color": "#007AFF",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "lineHeight": 18,
          "textAlign": "left",
        },
      ]
    }
  >
    Press me
  </Text>
</View>
`;
